<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.sfu.epsilon.servingcalculator.CalculateServing">

    <TextView
        android:text="@string/tv_pot"
        android:id="@+id/tv_pot"
        android:layout_width="wrap_content"
        android:textColor="#333"
        android:layout_height="wrap_content"
        android:paddingTop="18dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_weight"
        android:textColor="#333"
        android:layout_below="@+id/tv_pot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/tv_weight_empty"
        android:textSize="18sp" />

    <TextView
        android:text="@string/tv_weight_with_food_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_weight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#333"
        android:layout_marginTop="34dp"
        android:id="@+id/tv_weight_pot_and_food"
        android:textSize="18sp" />

    <TextView
        android:text="@string/tv_na"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:id="@+id/tv_pot_weight"
        android:textColor="#333"
        android:textSize="18sp"
        android:layout_above="@+id/tv_weight_pot_and_food"
        android:layout_toRightOf="@+id/tv_weight_pot_and_food"
        android:layout_toEndOf="@+id/tv_weight_pot_and_food" />

    <TextView
        android:text="@string/tv_na"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_pot_name"
        android:textSize="18sp"
        android:textColor="#333"
        android:layout_above="@+id/tv_pot_weight"
        android:layout_alignLeft="@+id/tv_pot_weight"
        android:layout_alignStart="@+id/tv_pot_weight" />

    <TextView
        android:text="@string/tv_weight_of_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edText_weight_with_food"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#333"
        android:id="@+id/tv_weight_food"
        android:textSize="18sp" />

    <TextView
        android:text="@string/tv_na"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333"
        android:id="@+id/tv_total_serving_weight"
        android:layout_alignBottom="@+id/tv_serving_weight"
        android:layout_alignLeft="@+id/tv_pot_weight"
        android:layout_alignStart="@+id/tv_pot_weight"
        android:layout_alignTop="@+id/tv_serving_weight"
        android:textSize="18sp" />

    <TextView
        android:text="@string/tv_na"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_weight_of_food"
        android:textSize="18sp"
        android:textColor="#333"
        android:layout_below="@+id/edText_weight_with_food"
        android:layout_alignLeft="@+id/tv_total_serving_weight"
        android:layout_alignStart="@+id/tv_total_serving_weight" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edText_weight_with_food"
        android:hint="@string/tv_enter_a_weight"
        android:layout_alignBaseline="@+id/tv_weight_pot_and_food"
        android:layout_alignBottom="@+id/tv_weight_pot_and_food"
        android:layout_toRightOf="@+id/tv_serving_weight"
        android:layout_toEndOf="@+id/tv_serving_weight" />

    <TextView
        android:text="@string/tv_how_many_servings"
        android:layout_width="wrap_content"
        android:textColor="#333"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/tv_how_many_servings"
        android:textSize="18sp"
        android:layout_below="@+id/tv_weight_food"
        android:layout_alignRight="@+id/tv_weight_pot_and_food"
        android:layout_alignEnd="@+id/tv_weight_pot_and_food" />

    <TextView
        android:text="@string/tv_weight_of_a_serving_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333"
        android:id="@+id/tv_serving_weight"
        android:textSize="18sp"
        android:layout_below="@+id/tv_how_many_servings"
        android:layout_alignLeft="@+id/tv_how_many_servings"
        android:layout_alignStart="@+id/tv_how_many_servings"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edText_servings_amount"
        android:hint="@string/tv_number_of_servings"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/tv_how_many_servings"
        android:layout_alignBottom="@+id/tv_how_many_servings"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/tv_total_serving_weight"
        android:layout_alignStart="@+id/tv_total_serving_weight" />

    <Button
        android:text="@string/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn_back" />

</RelativeLayout>
